feat: 프론트 엔드쪽과 연동 90% 완료